platform-services-v2/orchestration-services/kubeflow/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubeflow
  labels:
    app.kubernetes.io/name: kubeflow-pipelines
    app.kubernetes.io/component: ml-workflows
    deployment.wave: "2"
    istio-injection: enabled
