platform-services-v2/orchestration-services/kubeflow/kubeflow-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeflow-ui-server
  namespace: kubeflow
  labels:
    app.kubernetes.io/name: kubeflow-pipelines
    app.kubernetes.io/component: ui-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kubeflow-pipelines
      app.kubernetes.io/component: ui-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubeflow-pipelines
        app.kubernetes.io/component: ui-server
        deployment.wave: "2"
    spec:
      serviceAccountName: kubeflow-pipelines
      nodeSelector:
        NodeGroup: base-apps
      containers:
      - name: ui-server
        image: gcr.io/ml-pipeline/frontend:2.2.0
        ports:
        - containerPort: 3000
          name: http
        resources:
          requests:
            memory: 512Mi
            cpu: 250m
          limits:
            memory: 1Gi
            cpu: 500m
        livenessProbe:
          httpGet:
            path: /apis/v1beta1/healthz
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /apis/v1beta1/healthz
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
