platform-services-v2/orchestration-services/kubeflow/kubeflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeflow-ingress
  namespace: kubeflow
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
  labels:
    app.kubernetes.io/name: kubeflow-pipelines
    app.kubernetes.io/component: ingress
spec:
  rules:
  - http:
      paths:
      - path: /kubeflow
        pathType: Prefix
        backend:
          service:
            name: kubeflow-ui-server
            port:
              number: 3000
